# CK_Missive

./: '2026-05-18'  .dockerignore  .env.example  .gitattributes  .gitignore  .template-policy.yml.example  @AGENT.md  @CSV_IMPORT_SKILL_SPEC.md  @DEVELOPMENT_STANDARDS.md  @PROJECT_CODE_SPEC.md  @SCHEMA_VALIDATION_SKILL_SPEC.md  @SYSTEM_ARCHITECTURE_REVIEW.md  @TYPE_CONSISTENCY_SKILL_SPEC.md  @fix_plan.md  @system_status_report.md  ArchitectureViewer.vb  CALENDAR_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPLETE_SYSTEM_STATUS.md  IMPLEMENTATION_COMPLETED.md  ISSUES_RESOLVED.md  NAVIGATION_RESTORATION_PLAN.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_SECURITY_CHECKLIST.md  PROJECT_ARCHITECTURE_OPTIMIZATION_PROPOSAL.md  PROMPT.md  README.md  SIMPLE_RESTART_GUIDE.md  SYSTEM_CONFIG_CHECKLIST.md  SYSTEM_FIX_REPORT.md  complete-database-init.py  config-manager.ps1  database_relationship_analysis.md  dev-start.ps1  dev-start.sh  dev-sync.sh  docker-compose.dev.yml  docker-compose.infra.secrets.yml  docker-compose.infra.yml  (+17 more)
backend/: .dockerignore  .env.example  .gitignore  =2.0.32  Dockerfile  Dockerfile.dev  Dockerfile.simple  Dockerfile.unified  GOOGLE_CALENDAR_SETUP.md  Google_Calendar_Setup_Guide.md  README.md  clear_cache.py  create_auth_migration.py  create_missing_tables.sql  create_regular_user.py  create_user.py  data_migration_script.py  database_indexes_optimization.sql  execute_missing_tables.py  initialize_user_permissions.py  main.py  manage.py  mcp_server.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup_admin.py  setup_admin_fixed.py  setup_admin_simple.py  start_dev.py  startup.py  system_health_checker.py  test_import.py  test_import_full.py  verify_complete_system.py
backend/alembic/: env.py
backend/alembic/versions/: 133fbad5cf1e_merge_heads_and_add_coordinates.py  20260130_increase_dispatch_work_type_length.py  20260303_fix_dispatch_order_doc_fk_ondelete.py  20260304_move_batch_to_dispatch.py  20260312_add_dispatch_entity_link.py  20260313a001_add_normalized_sender_receiver_and_.py  20260313a003_add_ner_pending_flag.py  20260315a001_create_agent_trace_tables.py  20260315a002_create_document_chunks_table.py  20260315a003_add_bm25_tsvector.py  20260316a001_create_agent_learnings_table.py  20260316b001_create_pm_tables.py  20260316b002_create_erp_tables.py  20260317a001_float_to_numeric_taoyuan.py  20260317a002_add_erp_budget_limit.py  20260321a001_add_einvoice_sync_tables.py  20260321a002_add_multi_currency_to_expense_invoices.py  20260322a001_add_kg_federation_columns.py  20260322a002_add_erp_composite_indexes.py  20260322a003_add_vendor_id_fk.py  20260322a004_add_line_login_fields.py  (+97 more)
backend/config/: agent-policy.yaml  inference-profiles.yaml  producer_outcome_registry.json  remote_backup.json  tender_keyword_rules.json
backend/scripts/: embed_knowledge_base.py  enrich_dispatch_from_master.py  extract_er_model.py  fix_doc_number_format.py  regenerate_project_codes.py  start-backend.bat  start-backend.ps1
backend/tests/: __init__.py  conftest.py  test_calendar_date_inversion_regression.py  test_google_service.py  test_kg_embedding_cron_observability_regression.py  test_line_monthly_quota_shortcircuit_regression.py  test_line_push_chain_regression.py  test_schema_consistency.py  test_transaction_isolation.py
(+4099 files in other folders)
